2013-10-29  Dario Rodriguez <dario@artica.es>

	* include/functions_crm.php: Added links to top 10 estimated sales.
	* operation/leads/lead_statistics.php: Added tip for conversion ratio
	explanation.

2013-10-29  Alejandro Gallardo <alejandro.gallardo@artica.es>

	* operation/incidents/incident_search.php: Fixed an error that made
	impossible to filter the incidents by its start or end date.

	* include/functions_db.php: Fixed an error on the function
	"create_custom_search" that made impossible to unserialize the data
	string under certain circunstances.

2013-10-28  Dario Rodriguez <dario@artica.es>

	*  include/functions_incidents.php: Now pagitation function
	shows incident for last year as a tip.
	include/functions.php: Added additional text
	to pagination function.
 	* operation/incidents/incident_search.php: Fixed support for search
 	using date fields.
 	* operation/group/group.php: Now incident limit is based on the 
 	last year.

2013-10-28  Dario Rodriguez <dario@artica.es>
	
	* operation/incidents/incident_detail.php: Fixed an error 
	with incident limit creating and modifying incidents.

2013-10-28  Dario Rodriguez <dario@artica.es>

	* operation/inventories/manage_objects.php: Added new field
	to inventory object's management view to configure if the type
	will be displayed as a root type in tree view.

2013-10-28  Dario Rodriguez <dario@artica.es>

	* include/styles/integria.css,
	include/js/integria_inventory.js,
	include/functions_inventories.php,
	include/functions_db.php,
	integria_dbdata.sql,
	operation/inventories/inventory.php,
	operation/inventories/inventory_search.php,
	integria_demo.sql,
	images/tree_view.png,
	images/list_view.png,
	images/application_edit_white.png,
	integria_db.sql: Rewritten inventory tree view.
	* include/ajax/inventories.php: Fixed incident search
	pop up.

2013-10-28  Vanessa Gil <vanessa.gil@artica.es>

	* include/languages/ar.mo
	  include/languages/ar.po
	  include/languages/bn.mo
	  include/languages/bn.po